# META_HACKATHON

./: README.md  app.py  application.py  cleaned_data.csv  cleaner.py  environment.py  inference.py  main.py  messy_data.csv  models.py  openenv.yaml  pyproject.toml  requirements.txt  task1_easy.py  task2_medium.py  task3_hard.py
server/: app.py
