[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-data-cleaner"
version = "0.1.0"
dependencies = [
    "pandas",
    "openenv-core[core]",
    "fastapi",
    "uvicorn"
]

[project.entry-points."openenv"]
environment = "environment:CSVCleanerEnvironment"
