[project]
name = "csv-data-cleaner"
version = "0.1.0"
description = "OpenEnv CSV Cleaner Agent"

dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
